--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 #add_executable(ex1 reverseString/reverseString.c)
 #add_executable(ex1 dictionary/map.c dictionary/linkedList.h dictionary/linkedList.c systemChess/ChessSystem.c)
 #add_executable(ex1 systemChess/ChessSystem.c systemChess/game.h)
-add_executable(ex1 dictionary/test_utilities.h dictionary/map_example_test.c dictionary/map.c dictionary/map.h)
+add_executable(ex1 dictionary/test_utilities.h dictionary/map_example_test.c dictionary/map.c dictionary/map.h dictionary/map_tests2.c)
 #add_executable(ex1 dictionary/test_utilities.h dictionary/basic_test.c dictionary/map.c dictionary/map.h)
 
