--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 #add_executable(ex1 linkedList/mergeSort.c)
 #add_executable(ex1 reverseString/reverseString.c)
-#add_executable(ex1 dictionary/map.c dictionary/linkedList.h dictionary/linkedList.c systemChess/ChessSystem.c)
-#add_executable(ex1 systemChess/ChessSystem.c systemChess/game.h)
-add_executable(ex1 dictionary/test_utilities.h dictionary/map_example_test.c dictionary/map.c dictionary/map.h dictionary/map_tests2.c)
-#add_executable(ex1 dictionary/test_utilities.h dictionary/basic_test.c dictionary/map.c dictionary/map.h)
-
+#add_executable(ex1 map/tests/test_utilities.h map/tests/map_tests.c map/map.c map/headers/map.h map/tests/map_tests2.c)
+add_executable(ex1 systemChess/main.c systemChess/headers/chessSystem.h map/map.c map/node.c map/headers/map.h map/headers/node.h)
