--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 #add_executable(ex1 linkedList/mergeSort.c)
 #add_executable(ex1 reverseString/reverseString.c)
 #add_executable(ex1 map/tests/test_utilities.h map/tests/map_tests.c map/map.c map/headers/map.h map/tests/map_tests2.c)
-add_executable(ex1 systemChess/main.c systemChess/tests/chessSystemTestsExample.c systemChess/headers/chessSystem.h map/map.c map/node.c map/headers/map.h map/headers/node.h)
+add_executable(ex1 systemChess/main.c map/tests/map_tests2.c systemChess/headers/chessSystem.h
+        map/map.c map/node.c map/headers/map.h map/headers/node.h)
